--- a/gb/25/10/3/n14608814.md
+++ b/gb/25/10/3/n14608814.md
@@ -18,12 +18,12 @@
 <p>布罗德维尤市发言人大卫·奥姆斯比（David Ormsby）反驳了莱昂斯的信，他对福克斯新闻数位版表示：“ICE的代理局长写这封信一定是用了人工智能Grok AI，因为里面充满了虚构成分。”</p>
 <p>责任编辑：叶紫微#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/29/n14605292.md#1">芝加哥一男子威胁杀害ICE特工 面临联邦指控</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/9/30/n14605447.md#1">三女子泄露ICE探员住址 联邦大陪审团起诉</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/1/n14606919.md#1">ICE在佛州展开大规模行动 逮捕逾四百非法移民</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/3/n14607940.md#1">【重播】西维州州长：ICE将逮捕更多嫌疑人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/12/n10708622.md#1" target="_blank">陋兰：隐瞒和谎言，极权身体里的黄色血液</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/24/n11210435.md#1" target="_blank">“4.25”那天我们一家人站在府右街上</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/12/n11038748.md#1" target="_blank">邢诒心：作为地主崽的童年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/7/n11574300.md#1" target="_blank">他们为我们的生活带来光明（2）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
